# fast-tmp

./: .coveragerc  .env  .gitignore  .travis.yml  Makefile  README.md  a.json  b.json  b.txt  conftest.py  mkdocs-requirements.txt  mkdocs.yml  pyproject.toml  setup.cfg  task.md  test.db  ww.py
.github/: release-drafter.yml
.github/workflows/: python-package.yml  python-publish.yml  release-drafter.yml  test.yml
docs/: ModelAdmin.md  amis.md  cli.md  customization.md  field.md  index.md  page.md  resource.md  setting.md
docs/source/: conf.py  index.md
example/: .env  .env.example  Makefile  app.py  docker-compose.yml  example.db  p.py  pyproject.toml  settings.py
example/example/: admin.py  app.py  factory.py  main.py  models.py  settings.py
example/example/apps/example_app/: __init__.py
example/example/apps/example_app/routes/: hello_fast_tmp.py
example/static/amis/sdk/: ang-ie11.css  ang.css  antd-ie11.css  antd.css  barcode.js  charts.js  codemirror.js  color-picker.js  cropperjs.js  cxd-ie11.css  cxd.css  dark-ie11.css  dark.css  exceljs.js  helper.css.map  markdown.js  papaparse.js  rest.js  rich-text.js  sdk.js  tinymce.js
example/static/amis/sdk/locale/: de-DE.js
example/static/amis/sdk/renderers/Form/: CityDB.js
example/static/amis/sdk/thirds/hls.js/: hls.js
example/static/amis/sdk/thirds/monaco-editor/min/vs/: loader.js
example/static/amis/sdk/thirds/monaco-editor/min/vs/base/worker/: workerMain.js
example/static/amis/sdk/thirds/monaco-editor/min/vs/editor/: editor.main.js  editor.main.nls.js  editor.main.nls.zh-cn.js
example/static/amis/sdk/thirds/mpegts.js/: mpegts.js
fasfapi_cli/: __init__.py  main.py
fasfapi_cli/tpl/app/{{cookiecutter.app_name}}/: __init__.py
fasfapi_cli/tpl/project/{{cookiecutter.project_slug}}/: .env.example  Makefile  docker-compose.yml  pyproject.toml
fasfapi_cli/tpl/project/{{cookiecutter.project_slug}}/tests/: __init__.py
fasfapi_cli/tpl/project/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: common.py  factory.py  models.py  schemas.py  settings.py
fast_tmp/: __init__.py  db.py  exceptions.py  factory.py  model_site.py  models.py  redis.py  responses.py
fast_tmp/admin/: auth.py  constant.py  creator.py  depends.py  endpoint.py  exception_handlers.py  middware.py  model.py  models.py  register.py  res_model.py  responses.py  router.py  server.py  site.py  utils.py  utils_bak.py
fast_tmp/admin/html/: index.py
fast_tmp/admin/schema/: abstract_schema.py  actions.py  amis_json.py  app.py  buttons.py  crud.py  enums.py  frame.py  nav.py  page.py  site.py  zs.py
fast_tmp/admin/schema/forms/: __init__.py  enums.py  widgets.py
fast_tmp/admin/templates/: base.html  index.html  login.html  signin.html
fast_tmp/admin/templates/gh-pages/: index.html
fast_tmp/amis/: abstract_schema.py  actions.py  amislist.py  base.py  buttons.py  column.py  control.py  crud.py  css.py  custom.py  enums.py  filter.py  formitem.py  frame.py  grid.py  nav.py  page.py  response.py  site.py  style.py  utils.py  validate.py  wizard.py  zs.py
fast_tmp/amis/forms/: __init__.py  enums.py  filter.py  widgets.py
fast_tmp/amis/schema/: abstract_schema.py  actions.py  amislist.py  buttons.py  crud.py  frame.py  page.py  zs.py
fast_tmp/amis/schema/forms/: __init__.py  widgets.py
fast_tmp/amis/view/: __init__.py  card.py  chart.py  divider.py  table.py
fast_tmp/conf/: __init__.py  global_settings.py
fast_tmp/contrib/auth/: hashers.py
fast_tmp/contrib/pydantic/: __init__.py
fast_tmp/contrib/tortoise/: fields.py  validators.py
fast_tmp/db/: fields.py
fast_tmp/depends/: auth.py  cas.py
fast_tmp/jinja_extension/: __init__.py  tags.py
fast_tmp/models/: __init__.py  site.py
fast_tmp/site/: __init__.py  base.py  field.py  filter.py  func.py  model_field.py  page.py  test_utils.py  util.py  util3.py  utils.py  utils2.py
fast_tmp/utils/: __init__.py  common.py  crud.py  crud2.py  crud3.py  crud_tools.py  crypto.py  db.py  encoding.py  enum.py  model.py  password.py  pydantic_creator.py  script.py  swagger_static_file.py  test.py  token.py
fast_tmp/utils/pydantic/: __init__.py  base.py  creator.py
fast_tmp/utils/tortoise_dantic/: __init__.py  creator.py
fast_tmp_cli/: __init__.py
fast_tmp_cli/tpl/project/: cookiecutter.json
fast_tmp_cli/tpl/project/cookiecutter.project_slug/{{cookiecutter.project_slug}}/: settings.py
fast_tmp_cli/tpl/project/src/: .env  app.py
fast_tmp_cli/tpl/project/src/{{cookiecutter.project_slug}}/: settings.py
fast_tmp_cli/tpl/project/{{cookiecutter.project_slug}}/: .env  app.py
fastapi_cli/: __init__.py
fastapi_cli/tpl/app/: cookiecutter.json
fastapi_cli/tpl/app/{{cookiecutter.app_name}}/: app.py
fastapi_cli/tpl/app/{{cookiecutter.app_name}}/routes/: hello_fast_tmp.py
fastapi_cli/tpl/project/: cookiecutter.json
fastapi_cli/tpl/project/{{cookiecutter.project_slug}}/: .env  Dockerfile  Makefile  app.py  conftest.py  docker-compose.yml  pyproject.toml
fastapi_cli/tpl/project/{{cookiecutter.project_slug}}/templates/: index.html
fastapi_cli/tpl/project/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: app.py  factory.py  settings.py  site.py
fastapi_cli/tpl/static/static/: swagger-ui-bundle.js
tests/: __init__.py  admin.py  base.py  main.py  models.py  pd.py  pyproject.toml  settings.py  test_Q.py  test_a.py  test_admin.py  test_amis.py  test_annotations.py  test_createsuperuser.py  test_fetch_related.py  test_field.py  test_many_to_one.py  test_model_name.py  test_perm.py  test_plugin.py  test_pydantic.py  test_site.py  testmodels.py
tests/test_example/: Dockerfile  Makefile  app.py  conftest.py  docker-compose.yml  pyproject.toml  test_example.sqlite3  xxx.json
tests/test_example/templates/: index.html
tests/test_example/test_example/: admin.py  app.py  factory.py  models.py  page.py  schemas.py  scripts.py  settings.py  site.py
tests/test_example/test_example/apps/api/v1/: __init__.py
tests/test_example/tests/: desc.py
tmp/: models.py
tmp/conf/: __init__.py  global_settings.py
tmp/utils/: db.py  password.py
(+11 files in other folders)
