[tool.poetry]
name = "fast-tmp"
version = "1.0.1"
description = "fastapi tortoise amis admin"
authors = ["Chise1 <chise123@live.com>"]
include = ["LICENSE", "README.md"]
license = "Apache-2.0"
packages = [
    { include = "fastapi_cli" },
    { include = "fast_tmp" }
]
repository = "https://github.com/Chise1/fast-tmp"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.6.1"
fastapi =  "^0.85.0"
python-jose = "^3.3.0"
asgiref = "^3.5.2"
tortoise-orm = "^0.19.2"
python-dotenv = "^0.21.0"
orjson = "^3.8.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
cookiecutter = "^2.1.1"
flake8 = "*"
isort = "*"
black = "22.8.0"
pytest = "*"
pytest-xdist = "*"
pytest-cov = "*"
pytest-asyncio = "*"
asynctest = "*"
bandit = "*"
mypy = "*"
httpx = "^0.23.0"
toml = "^0.10.2"
mkdocs = "^1.3.1"
uvicorn = "^0.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
url = "https://mirrors.aliyun.com/pypi/simple/"
name = "aliyun"
default = true


[tool.poetry.scripts]
fast-tmp = "fastapi_cli:main"

[tool.bandit]
exclude_dirs = ["tests","fastapi_cli/tpl"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]