[tool.poetry]
name = "fast-tmp"
version = "1.1.5"
description = "fastapi tortoise amis admin"
authors = ["Chise1 <chise123@live.com>"]
include = ["LICENSE", "README.md"]
license = "Apache-2.0"
packages = [
    { include = "fast_tmp_cli" },
    { include = "fast_tmp" }
]
repository = "https://github.com/Chise1/fast-tmp"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.7.0"
fastapi =  "^0.88.0"
python-jose = "^3.3.0"
asgiref = "^3.5.2"
tortoise-orm = "^0.19.2"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
cookiecutter = "^2.1.1"
flake8 = "*"
isort = "*"
black = "*"
pytest = "*"
pytest-xdist = "*"
pytest-cov = "*"
pytest-asyncio = "*"
asynctest = "*"
bandit = "*"
mypy = "*"
httpx = "^0.23.0"
toml = "^0.10.2"
mkdocs = "^1.3.2"
uvicorn = "^0.20.0"
aiofiles = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
url = "https://mirrors.aliyun.com/pypi/simple/"
name = "aliyun"
default = true


[tool.poetry.scripts]
fast-tmp = "fast_tmp_cli:main"

[tool.bandit]
exclude_dirs = ["tests","fast_tmp_cli/tpl"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]


[tool.flake8]
ignore = "E203,E501,W503,DAR101,DAR201,DAR402"
max-line-length = 100
per-file-ignores = [
    "tortoise/__init__.py:F401",
    "tortoise/fields/__init__.py:F401",
    "tortoise/backends/base/client.py:DAR401,DAR202",
    "tortoise/contrib/test/__init__.py:DAR401",
]
docstring_style = "sphinx"
