[tool.poetry]
name = "test-example"
version = "0.1.0"
description = ""
authors = []
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
fast-tmp = { path = "/home/yuxf/project/fast-tmp"}
cookiecutter = "^1.7.2"
uvicorn = "^0.20.0"
aiomysql = "^0.1.1"

[tool.poetry.dev-dependencies]
tortoise-orm = "^0.19.2"
aerich = "^0.6.3"
flake8 = "*"
isort = "*"
black = "^20.8b1"
pytest = "*"
pytest-xdist = "*"
pytest-cov = "*"
pytest-asyncio = "*"
asynctest = "*"
bandit = "*"
mypy = "*"
python-jose = "^3.2.0"
python-cas = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
url = "https://mirrors.aliyun.com/pypi/simple/"
name = "aliyun"
default = true

[tool.aerich]
tortoise_orm = "test_example.settings.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
